comleted basic website layout

--- a/progress-keeper/src/app/app.component.html
+++ b/progress-keeper/src/app/app.component.html
@@ -10,11 +10,19 @@
   </div>
 </nav>
 <div class="uk-container"></div> -->
-<div class="navbar is-dark">
-  <div class="navbar-brand">
-    <a class="navbar-item">
-      LOGO HERE
-    </a>
-  </div>
-</div>
+
+
+<!-- header -->
+<app-header></app-header>
+
+<!-- contact component -->
+<!-- <app-contact></app-contact> -->
+
+<!-- home component -->
+<!-- <app-home></app-home> -->
+
+<!-- routes -->
 <router-outlet></router-outlet>
+
+<!-- footer -->
+<app-footer></app-footer>
