--- a/progress-keeper/src/app/footer/footer.component.html
+++ b/progress-keeper/src/app/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container content has-text-centered">
+    <p>Made for you by Alex Gevork Abram.</p>
+    <p>Happy progression!</p>
+  </div>
+</footer>
