--- a/progress-keeper/src/app/header/header.component.html
+++ b/progress-keeper/src/app/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+<div class="navbar is-dark">
+  <!-- logo -->
+  <div class="navbar-brand">
+    <a class="navbar-item">
+      <!-- My logo goes here -->
+      <img src="assets/img/angular.jpg">
+    </a>
+  </div>
+
+  <!-- menu -->
+  <div class="navbar-menu">
+    <div class="navbar-end">
+      <a class="navbar-item" routerLink="/">Home</a>
+      <a class="navbar-item" routerLink="view-data">View Data</a>
+      <a class="navbar-item" routerLink="visualize-data">Visualize Data</a>
+      <a class="navbar-item" routerLink="about">About</a>
+      <a class="navbar-item" routerLink="help">Help</a>
+    </div>
+  </div>
+</div>
