add standard layout for all routes

--- a/progress-keeper/src/app/header/header.component.html
+++ b/progress-keeper/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="navbar is-dark">
   <!-- logo -->
   <div class="navbar-brand">
-    <a class="navbar-item">
+    <a class="navbar-item" [routerLink]="['']">
       <!-- My logo goes here -->
-      <img src="assets/img/angular.jpg">
+      <img width="60" src="assets/img/progress.jpg">
     </a>
   </div>
 
