--- a/progress-keeper/src/app/help/help.component.html
+++ b/progress-keeper/src/app/help/help.component.html
@@ -1,1 +1,9 @@
-<p>help works!</p>
+<section class="hero is-primary is-bold is-fullheight">
+  <div class="container has-text-centered">
+    <div class="hero-body">
+      <h1 class="title">
+        My Help Page!
+      </h1>
+    </div>
+  </div>
+</section>
