--- a/progress-keeper/src/app/view-data/view-data.component.html
+++ b/progress-keeper/src/app/view-data/view-data.component.html
@@ -1,1 +1,10 @@
-<p>view-data works!</p>
+<section class="hero is-primary is-bold is-fullheight">
+  <div class="container has-text-centered">
+    <div class="hero-body">
+      <h1 class="title">
+        My View-Data Page!
+      </h1>
+    </div>
+  </div>
+</section>
+
