add basic dropdown & table to components view-data and load-data

--- a/progress-keeper/src/app/load-data/load-data.component.html
+++ b/progress-keeper/src/app/load-data/load-data.component.html
@@ -1,1 +1,41 @@
-<p>load-data works!</p>
+<section class="hero is-primary is-bold is-fullheight">
+  <div class="container has-text-centered">
+    <div class="hero-body">
+      <h1 class="title">
+        LOAD-DATA
+      </h1>
+    </div>
+    <table class="table" table-cell-padding=10em>
+      <thead>
+        <tr>
+          <th>Week</th>
+          <th>Weight</th>
+        </tr>
+      </thead>
+      <tfoot>
+        <tr>
+          <th>Week</th>
+          <th>Weight</th>
+        </tr>
+      </tfoot>
+      <tbody>
+        <tr>
+          <th>Week # here</th>
+          <td>Weight here</td>
+        </tr>
+        <tr>
+          <th>Week # here</th>
+          <td>Weight here</td>
+        </tr>
+        <tr>
+          <th>Week # here</th>
+          <td>Weight here</td>
+        </tr>
+        <tr class="is-selected">
+          <th>Week # here</th>
+          <td>Weight here</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
