--- a/progress-keeper/src/app/view-data/view-data.component.html
+++ b/progress-keeper/src/app/view-data/view-data.component.html
@@ -8,30 +8,41 @@
     <div class="dropdown is-hoverable">
       <div class="dropdown-trigger">
         <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-          <span>Dropdown button</span>
+          <span>Select Year</span>
           <span class="icon is-small">
             <i class="fas fa-angle-down" aria-hidden="true"></i>
           </span>
         </button>
       </div>
       <div class="dropdown-menu" id="dropdown-menu" role="menu">
-        <div class="dropdown-content">
-          <a href="visualize-data" class="dropdown-item">
-            Dropdown item
-          </a>
-          <p class="dropdown-item">
-            Other dropdown item
+        <div class="dropdown-content" *ngFor="let year of allYears">
+          <p class="dropdown-item" (click)="yearSelect(year)">
+            {{year}}
           </p>
-          <a href="#" class="dropdown-item is-active">
-            Active dropdown item
-          </a>
-          <a href="#" class="dropdown-item">
-            Other dropdown item
-          </a>
-          <hr class="dropdown-divider">
-          <a href="#" class="dropdown-item">
-            With a divider
-          </a>
+        </div>
+      </div>
+    </div>
+    <div class="dropdown is-hoverable">
+      <div class="dropdown-trigger">
+        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+          <span>Select Exercise</span>
+          <span class="icon is-small">
+            <i class="fas fa-angle-down" aria-hidden="true"></i>
+          </span>
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu" role="menu" *ngIf="!yearSelected">
+        <div class="dropdown-content">
+          <p class="dropdown-item" >
+            Must Select Year
+          </p>
+        </div>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu" role="menu" *ngIf="yearSelected">
+        <div class="dropdown-content" *ngFor="let exercise of allExerciseNames">
+          <p class="dropdown-item" *ngIf="yearSelected" (click)="yearSelect(exercise)">
+            {{exercise}}
+          </p>
         </div>
       </div>
     </div>
