add component binding to populate table

--- a/progress-keeper/src/app/view-data/view-data.component.html
+++ b/progress-keeper/src/app/view-data/view-data.component.html
@@ -68,7 +68,7 @@
     
   </div>
   <div class="load-data-style" *ngIf="exerciseSelected && yearSelected">
-    <app-load-data></app-load-data>
+    <app-load-data [exercise]="selectedExercise" [year]="selectedYear"></app-load-data>
   </div>
 </section>
 
