--- a/progress-keeper/src/app/load-data/load-data.component.scss
+++ b/progress-keeper/src/app/load-data/load-data.component.scss
@@ -1,5 +1,5 @@
 .hero{
   background-image: url('../../assets/img/luke-chesser-3POMgLjfYv0-unsplash.jpg') !important;
-  background-size: cover;
+  // background-size: cover;
   background-position: center center;
 }
