remove about & load from navbar. style navbar in header.

--- a/progress-keeper/src/app/header/header.component.html
+++ b/progress-keeper/src/app/header/header.component.html
@@ -13,9 +13,9 @@
       <a class="navbar-item" routerLink="/">Home</a>
       <a class="navbar-item" routerLink="view-data">View Data</a>
       <a class="navbar-item" routerLink="visualize-data">Visualize Data</a>
-      <a class="navbar-item" routerLink="about">About</a>
+      <!-- <a class="navbar-item" routerLink="about">About</a> -->
       <a class="navbar-item" routerLink="help">Help</a>
-      <a class="navbar-item" routerLink="load-data">load</a>
+      <!-- <a class="navbar-item" routerLink="load-data">load</a> -->
     </div>
   </div>
 </div>
