--- a/progress-keeper/src/app/visualize-data/visualize-data.component.scss
+++ b/progress-keeper/src/app/visualize-data/visualize-data.component.scss
@@ -24,3 +24,14 @@
 .load-data-style{
   padding-top: 35px;
 }
+
+.scatterChart{
+  margin-top: 160px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  background-color: white;
+  border-color: black;
+}
