--- a/progress-keeper/src/app/visualize-data/visualize-data.component.html
+++ b/progress-keeper/src/app/visualize-data/visualize-data.component.html
@@ -66,7 +66,16 @@
       </div>
     </div>
     <div class="scatterChart" *ngIf="exerciseSelected && yearSelected">
-      <app-scatter-chart [exercise]="selectedExercise" [year]="selectedYear"></app-scatter-chart>
+      <app-scatter-chart *ngIf="loadNewChart"
+        [year]="selectedYear"
+        [exercise]="selectedExercise"
+        >
+      </app-scatter-chart>
+      <app-scatter-chart *ngIf="!loadNewChart"
+        [year]="selectedYear"
+        [exercise]="selectedExercise"
+        >
+      </app-scatter-chart>
     </div>
   </div>
 </section>
