--- a/progress-keeper/src/app/header/header.component.html
+++ b/progress-keeper/src/app/header/header.component.html
@@ -10,7 +10,7 @@
   <!-- menu -->
   <div class="navbar-menu">
     <div class="navbar-end">
-      <a class="navbar-item" routerLink="/">Home</a>
+      <!-- <a class="navbar-item" routerLink="/">Home</a> -->
       <a class="navbar-item" routerLink="view-data">View Data</a>
       <a class="navbar-item" routerLink="visualize-data">Visualize Data</a>
       <!-- <a class="navbar-item" routerLink="about">About</a> -->
