--- a/progress-keeper/src/app/view-data/view-data.component.scss
+++ b/progress-keeper/src/app/view-data/view-data.component.scss
@@ -24,3 +24,11 @@
 .load-data-style{
   padding-top: 35px;
 }
+
+.dropdown-item{
+  font-family: "Lucida Console", "Courier New", Arial, monospace;
+}
+
+.title{
+  font-family: Georgia, 'Times New Roman', Times, serif; 
+}
