--- a/progress-keeper/src/app/visualize-data/visualize-data.component.scss
+++ b/progress-keeper/src/app/visualize-data/visualize-data.component.scss
@@ -35,3 +35,11 @@
   background-color: white;
   border-color: black;
 }
+
+.dropdown-item{
+  font-family: "Lucida Console", "Courier New", Arial, monospace;
+}
+
+.title{
+  font-family: Georgia, 'Times New Roman', Times, serif; 
+}
