--- a/progress-keeper/src/app/visualize-data/visualize-data.component.html
+++ b/progress-keeper/src/app/visualize-data/visualize-data.component.html
@@ -11,7 +11,7 @@
     <div class="dropdown is-hoverable">
       <div class="dropdown-trigger" *ngIf="!yearSelected">
         <button class="button dropdown-button" aria-haspopup="true" aria-controls="dropdown-menu">
-          <span>Select Year</span>
+          <span style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: large;">Select Year</span>
           <span class="icon is-small">
             <i class="fas fa-angle-down" aria-hidden="true"></i>
           </span>
@@ -26,7 +26,7 @@
       </div>
       <div class="dropdown-trigger" *ngIf="yearSelected">
         <button class="button dropdown-button" aria-haspopup="true" aria-controls="dropdown-menu">
-          <span>{{selectedYear}}</span>
+          <span style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: large;">{{selectedYear}}</span>
           <span class="icon is-small">
             <i class="fas fa-angle-down" aria-hidden="true"></i>
           </span>
@@ -36,7 +36,7 @@
     <div class="dropdown is-hoverable">
       <div class="dropdown-trigger" *ngIf="!exerciseSelected">
         <button class="button dropdown-button" aria-haspopup="true" aria-controls="dropdown-menu">
-          <span>Select Exercise</span>
+          <span style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: large;">Select Exercise</span>
           <span class="icon is-small">
             <i class="fas fa-angle-down" aria-hidden="true"></i>
           </span>
@@ -63,7 +63,7 @@
       </div>
       <div class="dropdown-trigger" *ngIf="exerciseSelected">
         <button class="button dropdown-button" aria-haspopup="true" aria-controls="dropdown-menu">
-          <span>{{selectedExercise}}</span>
+          <span style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: large;">{{selectedExercise}}</span>
           <span class="icon is-small">
             <i class="fas fa-angle-down" aria-hidden="true"></i>
           </span>
