add Google font styling

--- a/progress-keeper/src/app/footer/footer.component.html
+++ b/progress-keeper/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container content has-text-centered">
+  <div class="container content has-text-centered" style="font-family: Lato, Georgia, 'Times New Roman', Times, serif;">
     <p>Made for you by Alex Gevork Abram.</p>
     <p>Happy progression!</p>
   </div>
