--- a/progress-keeper/src/app/view-data/view-data.component.scss
+++ b/progress-keeper/src/app/view-data/view-data.component.scss
@@ -30,5 +30,5 @@
 }
 
 .title{
-  font-family: Georgia, 'Times New Roman', Times, serif; 
+  font-family: 'Noto Sans', Georgia, 'Times New Roman', Times, serif;
 }
