--- a/progress-keeper/src/app/visualize-data/visualize-data.component.scss
+++ b/progress-keeper/src/app/visualize-data/visualize-data.component.scss
@@ -41,5 +41,5 @@
 }
 
 .title{
-  font-family: Georgia, 'Times New Roman', Times, serif; 
+  font-family: 'Noto Sans', Georgia, 'Times New Roman', Times, serif; 
 }
