--- a/progress-keeper/src/styles.scss
+++ b/progress-keeper/src/styles.scss
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'bulma/css/bulma.css';
 @import 'bulma/bulma.sass';
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans&family=Poppins&display=swap');
