--- a/progress-keeper/src/app/header/header.component.html
+++ b/progress-keeper/src/app/header/header.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <!-- menu -->
-  <div class="navbar-menu" style="font-family: Lato, Georgia, 'Times New Roman', Times, serif;">
+  <div class="navbar-menu">
     <div class="navbar-end">
       <!-- <a class="navbar-item" routerLink="/">Home</a> -->
       <a class="navbar-item" routerLink="view-data">View Data</a>
