add scrollable data table

--- a/progress-keeper/src/app/load-data/load-data.component.scss
+++ b/progress-keeper/src/app/load-data/load-data.component.scss
@@ -3,3 +3,9 @@
   // background-size: cover;
   background-position: center center;
 }
+
+.table {
+  overflow-y: scroll;
+  height: 100%;
+  display:block;
+}
