--- a/progress-keeper/src/app/header/header.component.html
+++ b/progress-keeper/src/app/header/header.component.html
@@ -14,7 +14,7 @@
       <a class="navbar-item" routerLink="view-data">View Data</a>
       <a class="navbar-item" routerLink="visualize-data">Visualize Data</a>
       <!-- <a class="navbar-item" routerLink="about">About</a> -->
-      <a class="navbar-item" routerLink="help">Help</a>
+      <!-- <a class="navbar-item" routerLink="help">Help</a> -->
       <!-- <a class="navbar-item" routerLink="load-data">load</a> -->
     </div>
   </div>
