add show/hide dropdown and responsive layout

--- a/progress-keeper/src/app/load-data/load-data.component.scss
+++ b/progress-keeper/src/app/load-data/load-data.component.scss
@@ -8,4 +8,12 @@
   overflow-y: scroll;
   // height: 650px;
   display:block;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
+
+// @media screen and (max-width:600px){
+//   .table{
+//     margin-bottom: 20px;
+//   }
+// }
