--- a/progress-keeper/src/app/view-data/view-data.component.scss
+++ b/progress-keeper/src/app/view-data/view-data.component.scss
@@ -10,7 +10,8 @@
 }
 
 .dropdown{
-  padding-right: 10px;
+  // padding-right: 10px;
+  margin: 10px;
 }
 
 .dropdown-button{
@@ -19,6 +20,7 @@
 
 .dropdown-content{
   min-width: 200px;
+  display: block;
 }
 
 .load-data-style{
@@ -31,4 +33,33 @@
 
 .title{
   font-family: 'Noto Sans', Georgia, 'Times New Roman', Times, serif;
+}
+
+.dropdown-content-year{
+  min-width: 200px;
+  display: block;
+}
+.dropdown-content-exercise{
+  min-width: 200px;
+  display: block;
+}
+.show{
+  display: none;
+}
+
+.dropdown-year{
+  height: 150px;
+  overflow: auto;
+}
+
+@media screen and (max-width:650px){
+  .title{
+    font-size: 20px;
+  }
+  .dropdown{
+    margin: 10px;
+  }
+  .dropdown-button{
+    margin:10px;
+  }
 }
