fix page bottom margin

--- a/progress-keeper/src/app/visualize-data/visualize-data.component.html
+++ b/progress-keeper/src/app/visualize-data/visualize-data.component.html
@@ -1,5 +1,5 @@
 <section class="hero is-primary is-bold is-fullheight">
-  <div class="container has-text-centered">
+  <div class="container has-text-centered" style="margin-bottom: 20px;">
     <!-- Header title -->
     <div class="hero-body">
       <h1 class="title" *ngIf="!exerciseSelected || !yearSelected">
