add view-data dropdown styling

--- a/progress-keeper/src/app/view-data/view-data.component.html
+++ b/progress-keeper/src/app/view-data/view-data.component.html
@@ -7,7 +7,9 @@
       </h1>
       <h1 class="title" *ngIf="exerciseSelected && yearSelected">
         Viewing data for {{selectedExercise}} in {{selectedYear}}
-        <p style="font-size: 15px; font-family: 'Noto Sans', Georgia, 'Times New Roman', Times, serif;"><br><br>Select the year then exercise to view other data</p>
+        <p style="font-size: 15px; font-family: 'Noto Sans', Georgia, 'Times New Roman', Times, serif;">
+          <br><br>Select alternate year or exercise to view other data
+        </p>
       </h1>
     </div>
     <!-- Year dropdown -->
