center table, fix section hero layout

--- a/progress-keeper/src/app/load-data/load-data.component.html
+++ b/progress-keeper/src/app/load-data/load-data.component.html
@@ -1,5 +1,5 @@
-<section class="hero is-primary is-bold is-fullheight">
-  <div class="container has-text-centered">
+<!-- <section class="hero is-primary is-bold is-fullheight"> -->
+  <!-- <div class="container has-text-centered"> -->
     <!-- <table *ngIf="printTable"
       [ngStyle] = "{
         'height': '650px',
@@ -27,5 +27,5 @@
         </tr>
       </tbody>
     </table>
-  </div>
-</section>
+  <!-- </div> -->
+<!-- </section> -->
