--- a/progress-keeper/src/app/load-data/load-data.component.scss
+++ b/progress-keeper/src/app/load-data/load-data.component.scss
@@ -7,9 +7,12 @@
 .table {
   overflow-y: scroll;
   // height: 650px;
-  display:block;
+  // display:block;
   margin-bottom: 20px;
   margin-top: 20px;
+  // position: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 // @media screen and (max-width:600px){
