--- a/progress-keeper/src/app/view-data/view-data.component.html
+++ b/progress-keeper/src/app/view-data/view-data.component.html
@@ -63,7 +63,28 @@
       </div>
     </div>
     <div class="load-data-style" *ngIf="exerciseSelected && yearSelected">
-      <app-load-data [exercise]="selectedExercise" [year]="selectedYear"></app-load-data>
+      <app-load-data *ngIf="loadNewGrid"
+        [exercise]="selectedExercise" 
+        [year]="selectedYear"
+        >
+      </app-load-data>
+      <app-load-data *ngIf="!loadNewGrid"
+        [exercise]="selectedExercise" 
+        [year]="selectedYear"
+        >
+      </app-load-data>
     </div>
+    <!-- <div class="scatterChart" *ngIf="exerciseSelected && yearSelected">
+      <app-scatter-chart *ngIf="loadNewChart"
+        [year]="selectedYear"
+        [exercise]="selectedExercise"
+        >
+      </app-scatter-chart>
+      <app-scatter-chart *ngIf="!loadNewChart"
+        [year]="selectedYear"
+        [exercise]="selectedExercise"
+        >
+      </app-scatter-chart>
+    </div> -->
   </div>
 </section>
